--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorPeterRiver">#3498db</color>
     <color name="colorBelizeHole">#2980b9</color>
+    <color name="colorMidnightBlue">#2c3e50</color>
+    <color name="colorOrange">#f39c12</color>
 </resources>
